force-app/main/default/objects/Intent_To_Return__c.object
<CustomObject>
    <fields>
        <fullName>Done_Different_to_Return__c</fullName>
        <label>Done Different to Return</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ITR_Decision_Time_Frame__c</fullName>
        <label>ITR Decision Time Frame</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>End of April</fullName>
                </value>
                <value>
                    <fullName>End of May</fullName>
                </value>
                <value>
                    <fullName>End of June</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ITR_No_COVID_Length__c</fullName>
        <label>ITR No COVID Length</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Until our local school opens for in-person class</fullName>
                </value>
                <value>
                    <fullName>Until COVID-19 cases were more under control</fullName>
                </value>
                <value>
                    <fullName>Until there was a COVID-19 vaccine</fullName>
                </value>
                <value>
                    <fullName>Until I/we had to go back to working outside the home</fullName>
                </value>
                <value>
                    <fullName>For 1 year</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ITR_No_COVID__c</fullName>
        <label>ITR No COVID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ITR_No_Intended_Length__c</fullName>
        <label>ITR No Intended Length</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A few months</fullName>
                </value>
                <value>
                    <fullName>Until the end of that school year</fullName>
                </value>
                <value>
                    <fullName>2-3 years</fullName>
                </value>
                <value>
                    <fullName>4 or more years</fullName>
                </value>
                <value>
                    <fullName>Until they graduated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ITR_No_Plan_Vs_Actual__c</fullName>
        <label>ITR No Plan Vs Actual</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ITR_Summer_Info__c</fullName>
        <label>ITR Summer Info</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit recovery</fullName>
                </value>
                <value>
                    <fullName>High school original credit and/or NCAA eligible courses</fullName>
                </value>
                <value>
                    <fullName>K-8 enrichment/world languages</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ITR_Why_Undecided__c</fullName>
        <label>ITR Why Undecided</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>We may be moving</fullName>
                </value>
                <value>
                    <fullName>We want to wait until the end of the school year to decide</fullName>
                </value>
                <value>
                    <fullName>We may not be able to provide a Learning Coach to assist our student next year</fullName>
                </value>
                <value>
                    <fullName>We have concerns about academic performance and are considering other options</fullName>
                </value>
                <value>
                    <fullName>We have concerns about socialization and are considering other options</fullName>
                </value>
                <value>
                    <fullName>We are waiting to see what happens with COVID-19</fullName>
                </value>
                <value>
                    <fullName>We have concerns about the learning platform and technology for next year and are considering other options</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>We think our student will return, but don’t want to commit yet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ITR_Yes_Primary_Returning_Reason__c</fullName>
        <label>ITR Yes Primary Returning Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Connections Academy provides our family a flexible schedule</fullName>
                </value>
                <value>
                    <fullName>Connections Academy offers a safer learning environment</fullName>
                </value>
                <value>
                    <fullName>My child is succeeding academically with Connections Academy</fullName>
                </value>
                <value>
                    <fullName>I prefer the curriculum and courses used by Connections Academy to alternatives</fullName>
                </value>
                <value>
                    <fullName>Connections Academy offers teachers who are highly qualified and dedicated to supporting students</fullName>
                </value>
                <value>
                    <fullName>Connections Academy accommodates my child’s health issues or special needs</fullName>
                </value>
                <value>
                    <fullName>Connections Academy provides a better school solution as a military family</fullName>
                </value>
                <value>
                    <fullName>Connections Academy allows me to be actively involved in my child/children’s education</fullName>
                </value>
                <value>
                    <fullName>Connections Academy best prepares my child for college or career opportunities</fullName>
                </value>
                <value>
                    <fullName>Online school continues to be the best option for my family during COVID-19</fullName>
                </value>
                <value>
                    <fullName>My child prefers online learning and wants to continue</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Return_Survey_Satisfied__c</fullName>
        <label>No Return Survey Satisfied</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Very satisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat satisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Very dissatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POA_Additional_Info_Request__c</fullName>
        <label>POA Additional Info Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Withdrawal_Reason__c</fullName>
        <label>Parent Withdrawal Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enrollment was intended to be short term and is no longer needed for my student</fullName>
                </value>
                <value>
                    <fullName>Generally dissatisfied with curriculum/course options</fullName>
                </value>
                <value>
                    <fullName>My student is pursuing a GED</fullName>
                </value>
                <value>
                    <fullName>My student wants to return to a traditional school setting for other (non-socialization related) reasons</fullName>
                </value>
                <value>
                    <fullName>My student wants to return to a traditional school setting for socialization reasons</fullName>
                </value>
                <value>
                    <fullName>Technical difficulties</fullName>
                </value>
                <value>
                    <fullName>The curriculum is too easy</fullName>
                </value>
                <value>
                    <fullName>The curriculum is too hard</fullName>
                </value>
                <value>
                    <fullName>The program takes too much of the Learning Coach’s time</fullName>
                </value>
                <value>
                    <fullName>The program takes too much of the student’s time</fullName>
                </value>
                <value>
                    <fullName>The program/schedule is not flexible enough</fullName>
                </value>
                <value>
                    <fullName>The transition to a virtual school was too difficult</fullName>
                </value>
                <value>
                    <fullName>There was not enough help/guidance setting us up in the school</fullName>
                </value>
                <value>
                    <fullName>We are moving</fullName>
                </value>
                <value>
                    <fullName>We are no longer able to provide a Learning Coach to assist our student</fullName>
                </value>
                <value>
                    <fullName>We are not satisfied with our student’s teachers</fullName>
                </value>
                <value>
                    <fullName>We are not satisfied with the school leadership</fullName>
                </value>
                <value>
                    <fullName>We have chosen to homeschool</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>School or association phone number</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Program_Enrollment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Enrollment</label>
        <referenceTo>hed__Program_Enrollment__c</referenceTo>
        <relationshipLabel>Intent To Returns</relationshipLabel>
        <relationshipName>Intent_To_Returns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Group</label>
        <referenceTo>Enrollment_Component__c</referenceTo>
        <relationshipLabel>Intent To Returns</relationshipLabel>
        <relationshipName>Intent_To_Returns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SchoolCity__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>SchoolCity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchoolDistrict__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>SchoolDistrict</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchoolName__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>SchoolName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchoolState__c</fullName>
        <description>State in which the school or association operates</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>SchoolState</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchoolStreet_Address__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>SchoolStreet Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchoolType__c</fullName>
        <label>SchoolType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Homeschool</fullName>
                </value>
                <value>
                    <fullName>Charter School (Public)</fullName>
                </value>
                <value>
                    <fullName>Online (Virtual) Public School</fullName>
                </value>
                <value>
                    <fullName>Private/Parochial School</fullName>
                </value>
                <value>
                    <fullName>Public School</fullName>
                </value>
                <value>
                    <fullName>Virtual School (Public)</fullName>
                </value>
                <value>
                    <fullName>BIE School / Federal Grant / BIE Contract</fullName>
                </value>
                <value>
                    <fullName>State Supported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SchoolZIP__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>SchoolZIP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_School_Going_To__c</fullName>
        <label>Type School Going To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Charter</fullName>
                </value>
                <value>
                    <fullName>GED/HSE</fullName>
                </value>
                <value>
                    <fullName>Graduating</fullName>
                </value>
                <value>
                    <fullName>Homeschool</fullName>
                </value>
                <value>
                    <fullName>Other virtual</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_could_we_have_done_differently__c</fullName>
        <label>What could we have done differently</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Learning Platform could be more user-friendly</fullName>
                </value>
                <value>
                    <fullName>We experienced technical issues with the learning platform</fullName>
                </value>
                <value>
                    <fullName>Curriculum is too easy for my student</fullName>
                </value>
                <value>
                    <fullName>Curriculum is too hard for my student</fullName>
                </value>
                <value>
                    <fullName>The teachers do not communicate enough with students</fullName>
                </value>
                <value>
                    <fullName>The school team does not communicate enough with Learning Coaches</fullName>
                </value>
                <value>
                    <fullName>I could use additional support or training as a Learning Coach</fullName>
                </value>
                <value>
                    <fullName>The extracurricular activities do not meet the interests or needs of my student</fullName>
                </value>
                <value>
                    <fullName>My student needs more engagement with other students academically or socially</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Intent To Return</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Intent To Return Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intent To Returns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>